clone components from old project to new project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,7 @@
     </nz-header>
     <nz-content>
       <div class="inner-content">
+        <app-charts></app-charts>
         <router-outlet></router-outlet>
       </div>
     </nz-content>
