remove unneccessary components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
     </nz-header>
     <nz-content>
       <div class="inner-content">
-        <app-charts></app-charts>
+          <button nz-button nzType="primary" (click)="isActive = !isActive">Click me</button>
         <router-outlet></router-outlet>
       </div>
     </nz-content>
