--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,66 @@
 <nz-layout class="app-layout">
-  <nz-sider class="menu-sidebar"
-            nzCollapsible
-            nzWidth="256px"
-            nzBreakpoint="md"
-            [(nzCollapsed)]="isCollapsed"
-            [nzTrigger]="null">
+  <nz-sider
+    class="menu-sidebar"
+    nzCollapsible
+    nzWidth="256px"
+    nzBreakpoint="md"
+    [(nzCollapsed)]="isCollapsed"
+    [nzTrigger]="null"
+  >
     <div class="sidebar-logo">
-      <a href="https://ng.ant.design/" target="_blank">
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>Ant Design Of Angular</h1>
-      </a>
+      <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo" />
+      <h1>Smart Home Angular</h1>
     </div>
-    <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
-        <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a routerLink="/welcome">Welcome</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Monitor</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Workplace</a>
-          </li>
-        </ul>
-      </li>
-      <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
-        <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a>Basic Form</a>
-          </li>
-        </ul>
-      </li>
+
+    <div style="width: 100%; margin: 10px; padding: 0 10px;">
+      <button
+        *ngIf="!isCollapsed"
+        nz-button
+        nzType="primary"
+        style="margin: 0 auto;"
+      >
+        <i nz-icon nzType="plus-circle" nzTheme="fill"></i> Create group
+      </button>
+    </div>
+
+    <ul
+      nz-menu
+      nzTheme="dark"
+      nzMode="inline"
+      [nzInlineCollapsed]="isCollapsed"
+    >
+      <!-- <li nz-submenu nzOpen nzTitle="Houses" nzIcon="dashboard"> -->
+      <ul>
+        <li nz-menu-item nzMatchRouter>
+          <a routerLink="/welcome">Villa 1</a>
+        </li>
+        <li nz-menu-item nzMatchRouter>
+          <a>Villa 2</a>
+        </li>
+        <li nz-menu-item nzMatchRouter>
+          <a>Villa 3</a>
+        </li>
+      </ul>
+      <!-- </li> -->
     </ul>
   </nz-sider>
   <nz-layout>
     <nz-header>
       <div class="app-header">
         <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
-            <i class="trigger"
-               nz-icon
-               [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
-            ></i>
+          <i
+            class="trigger"
+            nz-icon
+            [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
+          ></i>
         </span>
       </div>
     </nz-header>
     <nz-content>
       <div class="inner-content">
-          <button nz-button nzType="primary" (click)="isActive = !isActive">Click me</button>
+        <button nz-button nzType="primary" (click)="isActive = !isActive">
+          Click me
+        </button>
         <router-outlet></router-outlet>
       </div>
     </nz-content>
