--- a/src/app/components/module-view/module-view.component.html
+++ b/src/app/components/module-view/module-view.component.html
@@ -1,1 +1,9 @@
-<p>module-view works!</p>
+<nz-collapse [nzBordered]="false">
+  <nz-collapse-panel
+    *ngFor="let panel of panels"
+    [nzHeader]="panel.name"
+    [nzActive]="panel.active"
+  >
+    <p>{{ panel.name }} content</p>
+  </nz-collapse-panel>
+</nz-collapse>
