--- a/src/app/components/sidenav-submenu/sidenav-submenu.component.html
+++ b/src/app/components/sidenav-submenu/sidenav-submenu.component.html
@@ -1,21 +1,17 @@
-<!--<ul-->
-<!--  nz-menu-->
-<!--  nzTheme="dark"-->
-<!--  nzMode="inline"-->
-<!--  [nzInlineCollapsed]="isCollapsed"-->
-<!--&gt;-->
-<li nz-submenu nzOpen [nzTitle]="this.title" [nzIcon]="this.icon">
-  <ul>
-    <li nz-menu-item nzMatchRouter>
-      <a routerLink=""><i nz-icon nzTheme="fill"></i> Villa 1
-      </a>
-    </li>
-    <!--      <li nz-menu-item nzMatchRouter>-->
-    <!--        <a>Villa 2</a>-->
-    <!--      </li>-->
-    <!--      <li nz-menu-item nzMatchRouter>-->
-    <!--        <a>Villa 3</a>-->
-    <!--      </li>-->
-  </ul>
-</li>
-<!--</ul>-->
+<ul
+  nz-menu
+  nzTheme="dark"
+  nzMode="inline"
+  [nzInlineCollapsed]="isCollapsed"
+>
+
+  <li nz-submenu nzOpen [nzTitle]="this.title" [nzIcon]="this.icon">
+    <ul>
+      <li nz-menu-item nzMatchRouter *ngFor="let item of items">
+        <a><i nz-icon [nzType]="item.icon" nzTheme="fill"></i> {{ item.title }}
+        </a>
+      </li>
+    </ul>
+  </li>
+
+</ul>
