Collect database from firebase.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,1 @@
-<nz-layout class="app-layout">
-  <!-- App sidebar -->
-  <nz-sider
-    class="menu-sidebar"
-    nzCollapsible
-    nzWidth="200px"
-    nzBreakpoint="md"
-    [(nzCollapsed)]="isCollapsed"
-    [nzTrigger]="null"
-  >
-
-    <app-sidenav-header></app-sidenav-header>
-
-    <app-create-group-button *ngIf="!isCollapsed"
-                             style="width: 100%; margin: 10px; padding: 0 10px;"></app-create-group-button>
-    <app-sidenav-submenu [title]="'Personalize'" [icon]="'tool'"
-                         [items]="personalizeNavigation" [isCollapsed]="isCollapsed"></app-sidenav-submenu>
-    <app-sidenav-submenu [title]="'Group'" [icon]="'book'" [items]="groupsNavigation"
-                         [isCollapsed]="isCollapsed"></app-sidenav-submenu>
-  </nz-sider>
-  <nz-layout>
-    <!--    <nz-header>-->
-    <!--      <div class="app-header">-->
-    <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
-          <i
-            class="trigger"
-            nz-icon
-            [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
-          ></i>
-        </span>
-    <!--      </div>-->
-    <!--    </nz-header>-->
-    <nz-content>
-      <div class="inner-content">
-        <app-home-view></app-home-view>
-        <router-outlet></router-outlet>
-      </div>
-    </nz-content>
-  </nz-layout>
-</nz-layout>
+<app-portal-screen></app-portal-screen>
