--- a/src/app/components/create-group-button/create-group-button.component.html
+++ b/src/app/components/create-group-button/create-group-button.component.html
@@ -1,8 +1,10 @@
-<button
-  *ngIf="!isCollapsed"
-  nz-button
-  nzType="primary"
-  style="margin: 0 auto;"
->
-  <i nz-icon nzType="plus-circle" nzTheme="fill"></i> Create group
-</button>
+<div style="width: 100%; text-align: center;">
+  <button
+    *ngIf="!isCollapsed"
+    nz-button
+    nzType="primary"
+    style="width: 80%; text-align: center;"
+  >
+    <i nz-icon nzType="plus-circle" nzTheme="fill"></i> Create group
+  </button>
+</div>
