--- a/src/app/components/home-view/home-view.component.html
+++ b/src/app/components/home-view/home-view.component.html
@@ -1,9 +1,9 @@
 <div style="width: 100%; text-align: center;">
   <div style="margin-bottom: 20px; width: 100%;">
-    <h1 nz-title style="margin-bottom: 5px;">Living room</h1>
-    <p>lordvoldermort@gmail.com</p>
+    <h1 nz-title style="margin-bottom: 5px;">{{ title }}</h1>
+    <p>{{ email }}</p>
 
-    <button nz-button nzType="primary" [nzSize]="large" nzShape="round">
+    <button nz-button nzType="primary" nzSize="large" nzShape="round">
       <i nz-icon nzType="api" nzTheme="fill"></i> Connect module
     </button>
   </div>
