--- a/src/app/components/sidenav-header/sidenav-header.component.html
+++ b/src/app/components/sidenav-header/sidenav-header.component.html
@@ -1,4 +1,4 @@
 <div class="sidebar-logo">
-  <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo"/>
-  <h1>Smart Home</h1>
+  <img src="../../../assets/homeapp-ico.png" alt="logo" [className]="isCollapsed ? 'image-fold' : 'image-unfold'"/>
+<!--  <h1 *ngIf="!isCollapsed">Smart Home</h1>-->
 </div>
