--- a/src/app/components/home-view/home-view.component.html
+++ b/src/app/components/home-view/home-view.component.html
@@ -3,10 +3,20 @@
     <h1 nz-title style="margin-bottom: 5px;">{{ title }}</h1>
     <p>{{ email }}</p>
 
-    <button nz-button nzType="primary" nzSize="large" nzShape="round">
+    <button nz-button nzType="primary" nzSize="large" nzShape="round" (click)="isVisible = true">
       <i nz-icon nzType="api" nzTheme="fill"></i> Connect module
     </button>
   </div>
 
-  <app-module-view></app-module-view>
+  <nz-modal [(nzVisible)]="isVisible" nzTitle="Create group" [nzFooter]="modalFooter">
+    <h4>Name {{ inputString }}</h4>
+    <input nz-input placeholder="Type here ..." [(ngModel)]="inputString"/>
+  </nz-modal>
+
+  <ng-template #modalFooter>
+    <button nz-button nzType="default" (click)="handleCancel()">Cancel</button>
+    <button nz-button nzType="primary" (click)="handleOk()">Connect</button>
+  </ng-template>
+
+  <app-module-view [modules]="modules"></app-module-view>
 </div>
