--- a/src/app/components/module-view/module-view.component.html
+++ b/src/app/components/module-view/module-view.component.html
@@ -1,9 +1,12 @@
 <nz-collapse [nzBordered]="false">
   <nz-collapse-panel
-    *ngFor="let panel of panels"
-    [nzHeader]="panel.name"
-    [nzActive]="panel.active"
+    *ngFor="let module of modules"
+    [nzHeader]="module.name"
   >
-    <p>{{ panel.name }} content</p>
+    <p>MAC {{ module.MAC }}</p>
+    <p>Status {{ module.status }}</p>
+    <p>Humidity {{ module.humidity }}%</p>
+    <p>{{ module.isLight ? 'Light ON' : 'light OFF' }}</p>
+    <p>Temp {{ module.temperature }}</p>
   </nz-collapse-panel>
 </nz-collapse>
