add order of each house to URL

--- a/src/app/components/home-view/home-view.component.html
+++ b/src/app/components/home-view/home-view.component.html
@@ -1,7 +1,7 @@
 <div style="width: 100%; text-align: center;">
   <div style="margin-bottom: 20px; width: 100%;">
     <h1 nz-title style="margin-bottom: 5px;">{{ title }}</h1>
-    <p>{{ email }}</p>
+    <p>{{ database.email }}</p>
 
     <button nz-button nzType="primary" nzSize="large" nzShape="round" (click)="isVisible = true">
       <i nz-icon nzType="api" nzTheme="fill"></i> Connect module
