--- a/src/app/pages/portal-screen/portal-screen.component.html
+++ b/src/app/pages/portal-screen/portal-screen.component.html
@@ -6,34 +6,33 @@
     nzCollapsible
     nzWidth="200px"
     nzBreakpoint="md"
-    [(nzCollapsed)]="isCollapsed"
+    [(nzCollapsed)]="settings.isCollapsed"
     [nzTrigger]="null"
   >
 
-    <app-sidenav-header [isCollapsed]="isCollapsed"
+    <app-sidenav-header [isCollapsed]="settings.isCollapsed"
                         style="width: 100%"></app-sidenav-header>
 
-    <app-create-group-button *ngIf="!isCollapsed" style="width: 100%;"></app-create-group-button>
+    <app-create-group-button *ngIf="!settings.isCollapsed" style="width: 100%;"></app-create-group-button>
 
-    <app-sidenav-submenu [isCollapsed]="isCollapsed"
+    <app-sidenav-submenu [isCollapsed]="settings.isCollapsed"
                          [theme]="settings.theme"></app-sidenav-submenu>
   </nz-sider>
   <nz-layout [class.layout-dark]="settings.isDark">
-    <nz-header>
-      <div class="app-header" [className]="settings.isDark ? 'app-header-dark' : 'app-header-light'">
-    <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
-      <i
-        class="trigger"
-        nz-icon
-        [className]="settings.isDark ? 'icon-dark' : 'icon-light'"
-        [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
-      ></i>
-    </span>
-      </div>
-    </nz-header>
+    <!--    <nz-header>-->
+    <!--      <div class="app-header" [className]="settings.isDark ? 'app-header-dark' : 'app-header-light'">-->
+    <!--    <span class="header-trigger" (click)="isCollapsed = !isCollapsed">-->
+    <!--      <i-->
+    <!--        class="trigger"-->
+    <!--        nz-icon-->
+    <!--        [className]="settings.isDark ? 'icon-dark' : 'icon-light'"-->
+    <!--        [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"-->
+    <!--      ></i>-->
+    <!--    </span>-->
+    <!--      </div>-->
+    <!--    </nz-header>-->
     <nz-content>
       <div [className]="settings.isDark ? 'inner-content-dark' : 'inner-content-light'">
-        <!--        <app-home-view></app-home-view>-->
         <router-outlet></router-outlet>
       </div>
     </nz-content>
