--- a/src/app/components/home-view/home-view.component.html
+++ b/src/app/components/home-view/home-view.component.html
@@ -19,10 +19,10 @@
     [isVisible]="isVisible"
     (isConnectButtonClicked)="isVisible = true"
   ></app-home-view-info>
-  <app-group-more-options
-    nz-col
-    nzSpan="1"
-    style="text-align: right; width: 30%;"
+  <app-group-more-options [name]="title" [order]="order" [icon]="'windows'" [groupID]="id"
+                          nz-col
+                          nzSpan="1"
+                          style="text-align: right; width: 30%;"
   ></app-group-more-options>
 </div>
 
@@ -33,7 +33,7 @@
   (nzOnCancel)="handleCancel()"
 >
   <h4>Enter MAC address</h4>
-  <input nz-input placeholder="Type here ..." [(ngModel)]="inputString" />
+  <input nz-input placeholder="Type here ..." [(ngModel)]="inputString"/>
 </nz-modal>
 
 <ng-template #modalFooter>
