--- a/src/app/components/home-view/home-view.component.html
+++ b/src/app/components/home-view/home-view.component.html
@@ -48,4 +48,4 @@
   </button>
 </ng-template>
 
-<app-module-view [modules]="modules"></app-module-view>
+<app-module-view [modules]="modules" [groupID]="id" [order]="order"></app-module-view>
