--- a/src/app/components/info-button/info-button.component.html
+++ b/src/app/components/info-button/info-button.component.html
@@ -1,1 +1,2 @@
-<p>info-button works!</p>
+<i nz-icon nzType="bulb" style="margin: 5px auto; display: block; font-size: 30px;"></i>
+<div style="display: block; text-align: center;">{{ isLightON ? 'Light ON' : 'Light OFF' }}</div>
