--- a/src/app/components/home-view-info/home-view-info.component.html
+++ b/src/app/components/home-view-info/home-view-info.component.html
@@ -1,4 +1,4 @@
-<h1 nz-title style="margin-bottom: 5px;">{{ title }}</h1>
+<h1 nz-title style="margin-bottom: 5px;" [ngStyle]="{ color: settings.isDark ? '#fff' : '#000' }">{{ title }}</h1>
 <p>{{ email }}</p>
 <button nz-button nzType="primary" nzSize="large" nzShape="round" (click)="connectButtonTrigger()">
   <i nz-icon nzType="api" nzTheme="fill"></i> Connect module
