--- a/src/app/components/home-view/home-view.component.html
+++ b/src/app/components/home-view/home-view.component.html
@@ -17,7 +17,7 @@
     [title]="title"
     [email]="database.email"
     [isVisible]="isVisible"
-    (isConnectButtonClicked)="isVisible = true"
+    (isConnectButtonClicked)="isVisible = true; privateInputString = '';"
   ></app-home-view-info>
   <app-group-more-options [name]="title" [order]="order" [icon]="'windows'" [groupID]="id"
                           nz-col
@@ -32,8 +32,16 @@
   [nzFooter]="modalFooter"
   (nzOnCancel)="handleCancel()"
 >
-  <h4>Enter MAC address</h4>
-  <input nz-input placeholder="Type here ..." [(ngModel)]="inputString"/>
+  <div style="text-align: center" *ngIf="isSuccess">
+    <img src="../../../assets/checkanimation.gif" style="height: 150px;">
+  </div>
+  <div *ngIf="!isSuccess">
+    <h4>Enter MAC address (Only accept keys among [0-9] and [A-F])</h4>
+    <input (keydown.backspace)="backSpacePressed()" nz-input placeholder="Type here ..." [(ngModel)]="inputString"
+           style="margin-bottom: 10px; font-weight: bold; font-size: 24px; text-align: center; height: 30px; line-height: 34px;"/>
+    <nz-alert [nzMessage]="errorMessage" nzCloseable (nzOnClose)="errorMessage = ''" nzType="error"
+              *ngIf="errorMessage.length > 0"></nz-alert>
+  </div>
 </nz-modal>
 
 <ng-template #modalFooter>
