--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -4,8 +4,8 @@
   <div style="text-align: center">
     <nz-avatar [nzSrc]="databaseService.photoURL || ''" nzSize="150px" nzShape="circle"
                [nzIcon]="databaseService.photoURL === '' ? 'user' : ''" style="margin-bottom: 10px"></nz-avatar>
-    <h1 nz-title style="margin-bottom: 10px">{{ databaseService.name }}</h1>
-    <h3 nz-title style="margin-top: 0; margin-bottom: 20px">{{ databaseService.email }}</h3>
+    <h1 nz-title style="margin-bottom: 10px" [ngStyle]="{ color: settings.isDark ? '#fff' : '#000' }">{{ databaseService.name }}</h1>
+    <h3 nz-title style="margin-top: 0; margin-bottom: 20px" [ngStyle]="{ color: settings.isDark ? '#fff' : '#000' }">{{ databaseService.email }}</h3>
     <button nz-button nzType="danger" nzSize="large">Sign out</button>
   </div>
 </div>
