--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-portal-screen></app-portal-screen>
+<!-- <app-portal-screen></app-portal-screen>
+<app-login></app-login> -->
+<router-outlet></router-outlet>
