Chart is now useable. Search functions.

--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -1,7 +1,10 @@
-<nz-row *ngFor="let c of charts">
-  <div id={{c.id}}>
-    <canvas style="font-weight: lighter;" baseChart width="75vh" height="50vh" [datasets]="c.lineChartData"
-            [labels]="c.lineChartLabels" [options]="c.lineChartOptions" [chartType]="c.lineChartType"
-            [colors]="c.lineChartColors"></canvas>
-  </div>
+<nz-row>
+  <canvas style="font-weight: lighter;" baseChart width="75vh" height="50vh" [datasets]="localTemperatures"
+          [labels]="temperatureTimeline"
+          chartType="line"></canvas>
+</nz-row>
+<nz-row>
+  <canvas style="font-weight: lighter;" baseChart width="75vh" height="50vh" [datasets]="localHumidity"
+          [labels]="humidityTimeline"
+          chartType="line"></canvas>
 </nz-row>
